--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Обчислення з Неоморфізмом</title>
+    <title>Сімейний бєджет</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <div class="form-container">
-        <h1>Обчислення</h1>
+        <h1>Сімейний бєджет</h1>
         <form id="calcForm">
           <div class="input-field">
             <label for="inputNumber">Введіть число:</label>
             <input type="number" id="inputNumber" placeholder="Введіть число" />
           </div>
           <div class="input-field">
-            <label for="input1">Перше значення:</label>
+            <label for="input1">Витрати Ярика:</label>
             <input
               type="number"
               id="input1"
@@ -23,7 +23,7 @@
             />
           </div>
           <div class="input-field">
-            <label for="input2">Друге значення:</label>
+            <label for="input2">Витрати Тянюшки:</label>
             <input
               type="number"
               id="input2"
@@ -31,11 +31,11 @@
             />
           </div>
           <div class="input-field">
-            <label for="ya">ya (65%):</label>
+            <label for="ya">Славік (65%):</label>
             <input type="text" id="ya" disabled />
           </div>
           <div class="input-field">
-            <label for="ta">ta (35%):</label>
+            <label for="ta">Танюшка (35%):</label>
             <input type="text" id="ta" disabled />
           </div>
           <button type="submit">Обчислити</button>
