--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Сімейний бєджет</h1>
         <form id="calcForm">
           <div class="input-field">
-            <label for="inputNumber">Введіть число:</label>
+            <label for="inputNumber">За квартиру:</label>
             <input type="number" id="inputNumber" placeholder="Введіть число" />
           </div>
           <div class="input-field">
