--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             />
           </div>
           <div class="input-field">
-            <label for="ya">Славік (65%):</label>
+            <label for="ya">Ярика (65%):</label>
             <input type="text" id="ya" disabled />
           </div>
           <div class="input-field">
