--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <div class="form-container">
-        <h1>Сімейний бєджет</h1>
+        <h1>Сімейний бюджет</h1>
         <form id="calcForm">
           <div class="input-field">
             <label for="inputNumber">За квартиру:</label>
