--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <input type="text" id="ya" disabled />
           </div>
           <div class="input-field">
-            <label for="ta">Танюшка (35%):</label>
+            <label for="ta">Танюшки (35%):</label>
             <input type="text" id="ta" disabled />
           </div>
           <button type="submit">Обчислити</button>
