--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             />
           </div>
           <div class="input-field">
-            <label for="input2">Витрати Тянюшки:</label>
+            <label for="input2">Витрати Танюшки:</label>
             <input
               type="number"
               id="input2"
